--- a/client/src/Styles/searchBar.module.css
+++ b/client/src/Styles/searchBar.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
 .navBar{
     background-color: #FFFF01;
     height: 65px;
@@ -15,24 +17,56 @@
     height: 60px;
     max-width: 60px;
 }
-.navBar form {
-    background-color: blue;
+.formSearchBar{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    height: 100%;
+    width: 45%;
+    background-color: black;
+    transition: 0.3s;
 }
-.formSearchBar{
+.inputForm {
     color: #3A3A3A;
     background-color: black;
     height: 100%;
-    width: 1000px;
     padding-left: 20px;
     font-size: 20px;
     border: none;
     outline: 0;
-    
+    width: 70%;
+    flex-shrink: 2;
 }
 .searchButton {
-    background-color: red;
-    width: 150px;
+    background-color: black;
+    color: white;
+    border: none;
+    transition: 0.3s;
+    outline: 0;
+    width: 30%;
+    height: 100%;
+    font-family: 'Poppins', sans-serif;
+}
+.searchButton:hover {
+    background-color: #FFFF01;
+    color: black
+}
+@media screen and (max-width:768px) {
+    .navBar {
+        flex-direction: row;
+        height: auto;
+        flex-wrap: wrap;
+    }
+    .logo{
+        float: left;
+    }
+    .navBar span {
+        margin-bottom: 0px;
+    }
+    .formSearchBar{
+        height: 55px;
+        width: 100%;
+        order: 5;
+    }
+
 }
