--- a/client/src/Styles/landing.module.css
+++ b/client/src/Styles/landing.module.css
@@ -3,7 +3,7 @@
 
 
 html{
-    scroll-behavior: smoo;
+    scroll-behavior: smooth;
 }
 html a:link {
     text-decoration: none;
@@ -49,6 +49,9 @@ section:nth-of-type(2) {
     flex-wrap: wrap;
     justify-content: center;
     
+}
+.textBox a{
+    transition: color 0.3s ease-in-out;
 }
 .textBox h2 {
     height: 5px;
@@ -110,4 +113,31 @@ section:nth-of-type(2) {
 .henryShirt:hover {
     opacity: 75%;
     
+}
+.productSection {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    min-height: 100vh;
+    height: auto;
+    background: #131313;
+}
+.productSection span{
+    width: 100%;
+    height: 40px;
+    margin-left: 15px;
+    margin-bottom: 50px;
+}
+.productSection h1{
+    width: 25%;
+    height: 100%;
+    background-color: black;
+    color: white;
+    padding: 7px 5px 5px 35px;
+    border-radius: 5px;
 }
