--- a/client/src/Styles/productForm.module.css
+++ b/client/src/Styles/productForm.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 body {
     box-sizing: border-box;
     margin:0;
@@ -9,8 +10,8 @@ body {
     display: flex;
     flex-direction: column;    
     margin: 0 auto;
-    padding: 0rem;   
-    max-width: 1000px;    
+    width: 1000px;
+    height: 600px;    
 }
 
 @media screen and (min-width:768px) { 
@@ -24,10 +25,13 @@ body {
     display: flex;
     flex-direction: column; 
     background-color:#ffffff;
-    color:#ececec;
-    padding: 2rem 4rem;
-    flex: 0 3 65%;
-    
+    color: #949494;
+    padding: 4em;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    justify-content: space-evenly;
 }
 
 input, textarea{    
@@ -36,8 +40,8 @@ input, textarea{
     border-radius: .2rem;
     outline: none;
     margin: .5rem 0 .5rem;
-    padding: .5rem;
     width: 100%;
+    padding: 1em;
 }
 
 textarea{
@@ -47,34 +51,43 @@ textarea{
 .buttons{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color:#ffff01;
-    flex:1;
-    order:2;
-    padding: 1rem;
+    padding: 1rem; 
     text-align: center;
 }
 
 button{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 50px;
     align-self: center;
-    width:80%;
-    margin: .5rem;    
-    text-decoration: none;
-    padding: 10px;    
-    font-size: 12px;
+    width:60%;   
+    text-decoration: none;  
     color: #000000;
-    background-color: #ffffff;
-    border-radius: 2px;
-    border-style:none;
-    box-shadow: 10px 9px 18px -2px rgba(0,0,0,0.75);
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .imgLogo{
 }
 
 h3{
-    font-family: 'Poppins', sans-serif;
-    line-height: 1.5rem;
-    font-size:20px;    
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 32px;
+    text-align: center; 
+}
+.Multiselect{
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 11px;
+    text-align: center; 
+    padding: 0; 
 }
 
 @media screen and (min-width:768px) { 
