--- a/client/src/Styles/productForm.module.css
+++ b/client/src/Styles/productForm.module.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 body {
     box-sizing: border-box;
-    margin:0;
+    margin:0 auto;
     min-height: 100%;
     background-color:#464646;
+
 }
 
 .form{
     display: flex;
     flex-direction: column;    
-    margin: 0 auto;
+    margin: auto;
     width: 1000px;
     height: 600px;    
 }
@@ -71,9 +72,17 @@ button{
     border: 1px solid #DDDDDD;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: all .3s;
+}
+button:hover {
+    background: rgb(255, 255, 89);
+    width: 65%;
+    height: 3.2em;
 }
 
 .imgLogo{
+    width: 6em;
+    margin: 0 auto;
 }
 
 h3{
@@ -86,21 +95,31 @@ h3{
     font-family: Roboto;
     font-style: normal;
     font-size: 11px;
-    text-align: center; 
-    padding: 0; 
+    text-align: center;  
 }
 
-@media screen and (min-width:768px) { 
+.SubmitButton {
+    height: 2.5em;
+    width: 5em;
+    margin: 0 40%;
+}
+.SubmitButton:hover{
+    background: rgb(238, 238, 238);
+    width: 5em;
+    margin: 0 40%;
+    height: 2.5em;
+    border: 1px solid rgba(0, 0, 0, 0.25)
+}
+@media screen and (min-width:768px) {
+
     .buttons{        
         flex: 0 2 35%;
-        order:-1;        
+        order:-1;
     }
     .priceStock{
-        display: flex;
-                     
+        display: flex;       
     }
     .priceStock input{        
         margin-top: 1.5rem;
-                
     }    
 }
