--- a/client/src/Styles/productForm.module.css
+++ b/client/src/Styles/productForm.module.css
@@ -4,7 +4,12 @@ body {
     margin:0 auto;
     min-height: 100%;
     background-color:#464646;
-
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .form{
@@ -58,38 +63,34 @@ textarea{
     text-align: center;
 }
 
-button{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 50px;
-    align-self: center;
-    width:60%;   
-    text-decoration: none;  
-    color: #000000;
-    background: #FFFFFF;
-    border: 1px solid #DDDDDD;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: all .3s;
-}
-button:hover {
-    background: rgb(255, 255, 89);
-    width: 65%;
-    height: 3.2em;
-}
-
 .imgLogo{
     width: 6em;
     margin: 0 auto;
 }
-
+h2 {
+    font-weight: normal;
+    margin: .5em;
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 46px;
+    text-align: center;  
+    font-weight: lighter;
+}
 h3{
+    margin: .5em;
     font-family: Roboto;
     font-style: normal;
     font-size: 32px;
     text-align: center; 
+    font-weight: normal;
+}
+h4{
+    font-weight: 300;
+
+}   
+h5{
+    font-weight: 200;
+
 }
 .Multiselect{
     font-family: Roboto;
@@ -109,6 +110,53 @@ h3{
     margin: 0 40%;
     height: 2.5em;
     border: 1px solid rgba(0, 0, 0, 0.25)
+}
+
+.ControlButton {
+    border: 1px solid black;
+    border-radius: .5em;
+    margin: .5em;
+    display: bock;
+    align-items: center;
+    justify-content: center;
+    width: 6em;
+    height: 2.5em;
+    background: #adadad;
+    border: 1px solid #AFAFAF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.ItemCard{
+    margin: .5em auto;
+    width: 60em;
+    height: 4em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    border-radius: 1em;
+    border: 1px solid rgb(46, 46, 46);
+}
+.CreateButton{
+    margin: auto;
+    width: 100%;
+    height: 2.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffff84;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.GestorCard{
+    padding: 2em;
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 230, 0);
+    box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.25);
 }
 @media screen and (min-width:768px) {
 
