--- a/client/src/Styles/landing.module.css
+++ b/client/src/Styles/landing.module.css
@@ -103,7 +103,6 @@ section:nth-of-type(2) {
     flex-wrap: wrap;
     min-height: 100vh;
     height: auto;
-    background: #131313;
 }
 .productSection span{
     width: 100%;
@@ -118,4 +117,14 @@ section:nth-of-type(2) {
     color: white;
     padding: 7px 5px 5px 35px;
     border-radius: 5px;
+}
+
+.dropdown {
+    width: 50%;
+}
+.control{
+    background-color: red;
+}
+.menu{
+    background-color: red;
 }
