--- a/client/src/Styles/productCard.module.css
+++ b/client/src/Styles/productCard.module.css
@@ -83,7 +83,7 @@
     align-items: center;
     padding: 0px 15px;
     transition: 0.5s;
-    height: 70px;
+    height: 20%;
 }
 .description p{
     width: 100%;
@@ -104,7 +104,6 @@
     padding: 10px 20px;
     background: #fff;
     border-radius: 4px;
-    margin-top: 10px;
     text-decoration: none;
     font-weight: 600;
     color: #111;
@@ -127,4 +126,9 @@
     opacity: 1;
     transform: translateY(0px);
     transition-delay: 0.25s;
+}
+
+.card .price {
+    color: white;
+    margin: none;
 }
