--- a/client/src/Styles/landing.module.css
+++ b/client/src/Styles/landing.module.css
@@ -99,23 +99,34 @@ section:nth-of-type(2) {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-start;
     flex-wrap: wrap;
     min-height: 100vh;
     height: auto;
     background: #131313;
 }
 .productSection span{
-    width: 100%;
+    width: 45%;
     height: 40px;
-    margin-left: 15px;
     margin-bottom: 50px;
 }
 .productSection h1{
-    width: 25%;
+    width: 100%;
     height: 100%;
     background-color: black;
     color: white;
     padding: 7px 5px 5px 35px;
     border-radius: 5px;
+}
+
+.selectCategory {
+    width: 45%;
+    height: 40px;
+    margin-bottom: 50px;
+    
+}
+.divSelector{
+    padding: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
