--- a/client/src/Styles/searchResults.module.css
+++ b/client/src/Styles/searchResults.module.css
@@ -1,15 +1,15 @@
-html {
-    background-color: black;
-}
 .divResults {
-    border: 5px solid black;
     display: flex;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
-    width: 40%;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
     margin: auto;
     margin-top: 15px;
-    background-color: white;
     padding: 0px 0px 20px 0px;
+}
+.divResults h1 {
+    color: white;
+    width: 100%;
 }
