--- a/client/src/Styles/productCard.module.css
+++ b/client/src/Styles/productCard.module.css
@@ -79,7 +79,6 @@
     max-height: 18px;
     font-size: 1.3em;
     width: auto;
-    overflow:hidden;
     text-overflow: ellipsis;
 }
 .description{
@@ -92,7 +91,7 @@
 }
 .description p{
     width: 100%;
-    height: 100%;
+    max-height: 50px;
     text-align: center;
     line-height: 18px;
     font-size: 14px;
@@ -100,8 +99,9 @@
     color: white;
     transition: 0.5s;
     opacity: 0;
-    overflow-wrap: break-word;
-    margin-bottom: 30px;
+    overflow: hidden;
+    word-wrap: break-word;
+    margin-bottom: 10px;
 }
 
 .contentBx a {
