--- a/client/src/Styles/loginForm.module.css
+++ b/client/src/Styles/loginForm.module.css
@@ -1,214 +1,59 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 
-
-.containerDiv {
-	background: #eeeeee;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	height: 100%;
+.container{
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 900px;
+    height: 400px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
-
-.buttonLogin {
-	border-radius: 20px;
-	background-color:#eeeeee;
-	color: #444;
-	font-size: 12px;
-	border: none !important;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-	box-shadow: -3px -3px 5px  rgba(255, 255, 255, 0.733),
-	  4px 4px 5px  rgba(0,0,0,.1);
+.body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color:#ffff01;
+    padding: 1rem;
+    text-align: center;
+    width: 350px;
 }
 
-
-.buttonLogin:active {
-	transform: scale(0.95);
+.body label{
+    font-size: 50px;
 }
 
-.buttonLogin:focus {
-	outline: none !important; 
-	border: none !important;
+.body div{
+    margin-top: 20px;
 }
 
-.buttonhost {
-	background-color: transparent;
-	border-color: #FFFFFF;
-	box-shadow: -3px -3px 5px  rgba(255, 255, 255, 0.26),
-	  4px 4px 5px  rgba(0,0,0,.1)
+.form{
+    display: flex;
+    flex-direction: column; 
+    background-color:#ffffff;
+    color: #949494;
+    padding: 4em;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    justify-content: space-evenly;
+    width: 450px;
 }
 
-.formLogin {
-	background-color:#eeeeee ;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
+.imgLogo{
+    width: 6em;
+	margin: 0 auto;
+	padding-bottom: 0px;
 }
 
-.inputLogin {
-	background-color: #eee;
-	border: none !important;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
-	outline: none !important;
-	box-shadow: -3px -3px 5px  rgba(255, 255, 255, 0.733),
-	  4px 4px 5px  rgba(0,0,0,.1);
-	  border-radius: 20px;
-}
-.inputLogin:focus
-{
-	box-shadow: 3px 3px 5px  rgba(255, 255, 255, 0.651),
-	  -4px -4px 5px  rgba(0,0,0,.1);
-}
-.container {
-	background-color: #fff;
-	border-radius: 30px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
-}
-
-.formContainer {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.signInContainer {
-	left: 0;
-	width: 50%;
-	z-index: 2;
-}
-
-.container .rightPanelActive .signInContainer {
-	transform: translateX(100%);
-}
-
-.signUpContainer {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.container .rightPanelActive .signUpContainer {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
-}
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
-}
-
-.overlayContainer {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
-}
-
-.container .rightPanelActive .overlayContainer{
-	transform: translateX(-100%);
-}
-
-.overlay {
-	background:#ffaf00;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.containerRightPanelActive .overlay {
-  	transform: translateX(50%);
-}
-
-.overlayPanel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlayLeft {
-	transform: translateX(-20%);
-}
-
-.containerRightPanelActive .overlayLeft {
-	transform: translateX(0);
-}
-
-.overlayRight {
-	right: 0;
-	transform: translateX(0);
-}
-
-.containerRightPanelActive .overlayRight {
-	transform: translateX(20%);
-}
-
-.socialContainer {
-	margin: 20px 0;
-}
-
-.socialContainer a 
-{
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
-	  box-shadow: -3px -3px 5px  rgba(255, 255, 255, 0.733),
-	  4px 4px 5px  rgba(0,0,0,.1);
-}
-.socialContainer a:hover
-{
-	box-shadow: 3px 3px 5px  rgba(255, 255, 255, 0.651),
-	  -4px -4px 5px  rgba(0,0,0,.1);
+.form input{
+    background-color:#ececec;
+    border-style: none;
+    border-radius: .2rem;
+    outline: none;
+    margin: .5rem 0 .5rem;
+    width: 100%;
+    padding: 1em;
 }
