--- a/client/src/Styles/searchBar.module.css
+++ b/client/src/Styles/searchBar.module.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: space-around;
     font-family: 'Poppins', sans-serif;
-    align-items: center;
+    align-items: center;    
 }
 .logoSpan{
     width: 70px;
@@ -53,7 +53,7 @@
 }
 @media screen and (max-width:768px) {
     .navBar {
-        flex-direction: row;
+        flex-direction: column;
         height: auto;
         flex-wrap: wrap;
     }
@@ -68,5 +68,4 @@
         width: 100%;
         order: 5;
     }
-
 }
