--- a/client/src/Styles/loginForm.module.css
+++ b/client/src/Styles/loginForm.module.css
@@ -1,59 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
 
-.container{
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    width: 900px;
-    height: 400px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+.container {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 900px;
+  height: 400px;
+  margin-top: 120px;
+  margin-bottom: 60px;
 }
 
-.body{
+.body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #ffff01;
+  padding: 1rem;
+  text-align: center;
+  width: 350px;
+}
+
+.body label {
+  font-size: 50px;
+}
+
+.body div {
+  margin-top: 20px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  color: #949494;
+  padding: 4em;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  justify-content: space-evenly;
+  width: 450px;
+}
+
+.imgLogo {
+  width: 6em;
+  margin: 0 auto;
+}
+
+.form input {
+  background-color: #ececec;
+  border-style: none;
+  border-radius: 0.2rem;
+  outline: none;
+  margin: 0.5rem 0 0.5rem;
+  width: 100%;
+  padding: 1em;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background-color:#ffff01;
-    padding: 1rem;
-    text-align: center;
-    width: 350px;
-}
-
-.body label{
-    font-size: 50px;
-}
-
-.body div{
-    margin-top: 20px;
-}
-
-.form{
-    display: flex;
-    flex-direction: column; 
-    background-color:#ffffff;
-    color: #949494;
-    padding: 4em;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    justify-content: space-evenly;
-    width: 450px;
-}
-
-.imgLogo{
-    width: 6em;
-	margin: 0 auto;
-	padding-bottom: 0px;
-}
-
-.form input{
-    background-color:#ececec;
-    border-style: none;
-    border-radius: .2rem;
-    outline: none;
-    margin: .5rem 0 .5rem;
+    margin-top: 0;
     width: 100%;
-    padding: 1em;
+  }
+  .body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    background-color: #ffff01;
+    text-align: center;
+    align-items: center;
+  }
+  .imgLogo {
+    display: none;
+  }
+  .form {
+    max-width: 641px;
+    width: 100%;
+  }
 }
