--- a/client/src/Styles/searchBar.module.css
+++ b/client/src/Styles/searchBar.module.css
@@ -53,7 +53,7 @@
 }
 @media screen and (max-width:768px) {
     .navBar {
-        flex-direction: column;
+        flex-direction: row;
         height: auto;
         flex-wrap: wrap;
     }
