--- a/client/src/Styles/review.module.css
+++ b/client/src/Styles/review.module.css
@@ -1,22 +1,18 @@
 .reviewContainer {
-  background-color: #ffff01;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  background-color: #ffff01;
 }
 .reviewTittle {
   font-size: 2em;
   text-align: center;
-  margin-top: 4em;
 }
 .reviewCard {
-  padding-top: 36px;
-  padding-left: 36px;
-  padding-right: 36px;
-  display:flex;
-  flex-direction: row;;
+  padding: 15px;
   width: 75%;
+  height: 100%;
   background-color: white;
   color: rgb(20, 15, 15);
   margin-bottom: 1.5em;
@@ -24,7 +20,22 @@
   -webkit-box-shadow: 4px 4px 15px -5px rgba(0, 0, 0, 0.6);
   -moz-box-shadow: 4px 4px 15px -5px rgba(0, 0, 0, 0.6);
   box-shadow: 4px 4px 15px -5px rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: stretch;
 }
-.reviewCard p {
-  margin-left: 5em;
+
+.inputReviewDiv {
+  width: 100%;
+  text-align: center;
+}
+.reviewContent {
+  padding-left: 16px;
+  text-align: center;
+  margin: auto;
+}
+
+.reviewRating{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
