--- a/client/src/Styles/ordersTable.module.css
+++ b/client/src/Styles/ordersTable.module.css
@@ -1,81 +1,52 @@
 .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  margin: auto;
-  overflow-x: auto;
+
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: auto;
 }
-.content h3 {
-  color: white;
-  text-align: center;
-  font-size: 1.5em;
-  text-transform: uppercase;
-}
+  
 .table {
-  margin: 0.5rem;
-  background-color: whitesmoke;
-  text-align: center;
-  border-collapse: collapse;
+    margin: 1rem;
+    border-radius: 15px 15px 15px 15px;
+    -moz-border-radius: 15px 15px 15px 15px;
+    -webkit-border-radius: 15px 15px 15px 15px;
+    border: 2px solid #ffffff;
+    padding: 15px;
 }
 .table thead {
-  background-color: #ffff5a;
+    background-color: #ffff01;
 }
-.table thead th {
-  text-align: center;
-}
-.table td {
-  padding: 15px;
+.table td{
+    padding: 15px;
 }
 
 .table th {
-  text-align: left;
-  padding: 25px;
-  width: 700px;
-  color: black;
+    text-align: left;
+    padding: 25px;
+    width: 700px;
+    color: black;
 }
 
 tbody > tr:nth-child(odd) {
-  color: black;
+    color: white;
 }
 
 tbody > tr:nth-child(even) {
-  background-color: #ffff8e;
-  color: black;
+    background-color: #ffff5a;
 }
 
-tbody > tr:nth-child(odd) .buttonDelete {
-  color: black;
-  background-color: #ffff5a;
+tbody > tr:nth-child(odd) .buttonDelete{
+    color: black;
+    background-color:  #ffff5a;
 }
 
-tbody > tr:nth-child(even) .buttonDelete {
-  background-color: whitesmoke;
-  color: black;
+tbody > tr:nth-child(even) .buttonDelete{
+    background-color: black;
+    color: white;
 }
-.buttonDelete {
-  max-width: 100px;
-}
+
 .buttonDelete:hover {
-  opacity: 85%;
-  transition: 0.3s;
-}
-
-.buttonsRow {
-  display: flex;
-  justify-content: space-around;
-}
-::-webkit-scrollbar {
-  height: 4px;
-  width: 4px;
-  background: black;
-}
-::-webkit-scrollbar-thumb:horizontal {
-  background: #ffff5a;
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb:vertical {
-  background: #ffff5a;
-  border-radius: 10px;
+    opacity: 85%;
+    transition: 0.3s;
 }
