--- a/client/src/Styles/productDetail.module.css
+++ b/client/src/Styles/productDetail.module.css
@@ -1,119 +1,48 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 .divCard {
-  min-width: 250px;
-  width: 60%;
-  margin: auto;
-  margin-top: 3em;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.divContent {
-  background-color: #ffff01;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100%;
-  min-height: 200px;
-  justify-content: space-around;
-  align-items: center;
-}
-.divDescription {
-  width: 100%;
-  font-size: 150%;
-}
-.divContent:after {
-  content: "DESCRIPCION";
-  position: absolute;
-  font-size: 800%;
-  font-weight: 800;
-  font-style: italic;
-  color: black;
-  opacity: 0.08;
-}
-.divDescription p {
-  padding: 5px;
-  font-family: "Poppins", sans-serif;
-  text-align: center;
-}
-.imgBx {
-  margin: auto;
-}
-.imgBx img {
-  width: auto;
-  min-height: 150px;
-  max-height: 300px;
-}
-.divButtons {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  width: 30%;
-  border-left: black;
-  padding-bottom: 15px;
-  padding-left: 25px;
-  border-left: 1px double #000000;
-}
-.divButtons span p {
-  color: black;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 2em;
-  text-transform: uppercase;
-}
-.divButtons p {
-  color: black;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 1.7em;
-  text-transform: uppercase;
-}
-.mainInfo {
-  background-color: #ffffff;
-  width: 100%;
-  height: 400px;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  border-bottom: 1px double #000000;
-}
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 90vh;
-}
-.reviewsDiv {
-  width: 100%;
-  border-top: 1px double #000000;
-}
-.chip{
-  margin: 0.5em;
-}
-
-@media screen and (max-width: 768px) {
-  .divCard{
-    width: 100%;
-  }
-  .mainInfo{
+    background-color: black;
+    min-width: 250px;
+    width: 60%;
+    margin: auto;
+    display: flex;
     flex-direction: column;
-    height: 100%;
-  }
-  .divButtons{
-    border: none;
-    align-items: center;
+    justify-content: center;
+}
+.divCard h2 {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2.5em;
+    text-align: center;
+    text-transform: uppercase;
+}
+.divContent{
+    background-color: #FFFF01;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     width: 100%;
-    padding: 0;
-  }
-  .divButtons {
-    margin-bottom: 15px;
-  }
-  .chip{
-    display: inline-block;
-    margin: 0.5em;
-  }
+    justify-content: space-around;
+    align-items: center;
+    
+}
+.divDescription{
+    border-radius: 7;
+    width: 100%;
+}
+.divDescription p{
+    padding: 5px;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+}
+.divContent .imgBx img{
+    width: auto;
+    min-height: 150px;
+    height: 200px;
+}
+.divButtons{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
