--- a/client/src/Styles/userPanel.module.css
+++ b/client/src/Styles/userPanel.module.css
@@ -1,6 +1,6 @@
 .mainDiv {
   background-color: black;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   position: relative;
   display: flex;
@@ -11,7 +11,7 @@
   background-color: #ffff57;
   width:75%;
   height: 100%;
-  margin-top: 5%;
+  margin-top: 2.5%;
   top: 0;
   padding: 1em;
 }
