--- a/client/src/Styles/productCard.module.css
+++ b/client/src/Styles/productCard.module.css
@@ -56,7 +56,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 270px;
+    max-width: 250px;
 }
 .contentBx{
     position: absolute;
@@ -133,4 +133,8 @@
     opacity: 1;
     transform: translateY(0px);
     transition-delay: 0.25s;
+}
+.card:hover .imgBx img {
+    max-width: 200px;
+    transition: 1s ease-in-out;
 }
