--- a/client/src/Styles/signUp.module.css
+++ b/client/src/Styles/signUp.module.css
@@ -1,49 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
-
-.container{
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    width: 1000px;
-    height: 600px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-.body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color:#ffff01;
-    padding: 1rem;
-    text-align: center;
-    width: 350px;
-}
-
-.body label{
-    font-size: 50px;
-}
-
-.body div h2{
-    padding-top: 80px;
-}
-
-.body div{
-    margin-top: 20px;
+body {
+    box-sizing: border-box;
+    margin:0;
+    min-height: 100%;
+    background-color:black;
 }
 
 .form{
+    display: flex;    
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    max-height: 700px;
+    
+}
+
+.inputs{
     display: flex;
     flex-direction: column; 
     background-color:#ffffff;
     color: #949494;
-    padding: 4em;
+    padding: 1em 4em 4em 4em;
     font-family: Roboto;
     font-style: normal;
     font-weight: 300;
     font-size: 20px;
-    justify-content: space-evenly;
-    width: 450px;
+    max-width: 420px;
+    width: 100%;    
+}
+
+
+.form input{    
+    background-color:#ececec;
+    border-style: none;
+    border-radius: .2rem;
+    outline: none;
+    margin: 0rem .5rem 0.5rem 0rem;
+    width: 100%;
+    padding: 1em;
+}
+
+.h3Title{
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 32px;
+    text-align: center;
+    margin:0;
+    margin-bottom: .5em;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;    
+    background-color:#ffff01;
+    padding: 1rem; 
+    text-align: center;     
+    width: 100%;   
+    max-width: 550px;
+    order:-1;
+}
+
+button{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 22px;
+    /* line-height: 50px; */
+    align-self: center;
+    width:60%;   
+    text-decoration: none;  
+    color: #000000;
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .imgLogo{
@@ -51,16 +82,19 @@
     margin: 0 auto;
 }
 
-.form input{
-    background-color:#ececec;
-    border-style: none;
-    border-radius: .2rem;
-    outline: none;
-    margin: .5rem 0 .5rem;
-    width: 100%;
-    padding: 1em;
-}
-
-.button{
-
+@media screen and (min-width:768px) { 
+    .buttons{        
+        width: 100%;   
+        max-width: 550px;       
+    }
+    .form {
+        /* flex-direction: row; */
+        justify-content: center;
+        padding: 2rem 2rem 0rem 2rem;
+        width: 100%;
+    }
+    .inputs{
+        width: 100%;        
+        padding: 1em 4em 2em 4em;        
+    }
 }
