--- a/client/src/Styles/productCard.module.css
+++ b/client/src/Styles/productCard.module.css
@@ -38,10 +38,10 @@
     color: rgba(255,255,255,0.04)
 }
 .imgBx{
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10000;
+    z-index: 90;
     width: 100%;
     height: 220px;
     transition: 0.7s;
@@ -57,6 +57,7 @@
     left: 50%;
     transform: translate(-50%,-50%);
     max-width: 250px;
+    overflow: hidden;
 }
 .contentBx{
     position: absolute;
