--- a/client/src/Styles/landing.module.css
+++ b/client/src/Styles/landing.module.css
@@ -9,11 +9,11 @@ html a:link {
     text-decoration: none;
     transition: 0.3s;
     opacity: 100%;
-    color: black;
+    color: inherit;
 }
 html a:visited {
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 
 html a:hover {
